# Pico-C

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ast/: ast.h
src/lexer/: lexer.cpp  lexer.h
src/utils/: utils.h
